vlib/v/parser/tests/match_multi_else_branch_err.vv
fn main() {
	_ := match true {
		true { 1 }
		else { 3 }
		else { 5 }
	}
}
